--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="div-nav">
+        <nav>
             <ul>
                 <li><a href="#Accueil">Accueil</a></li>
                 <li><a href="#Galerie">Galerie</a></li>
@@ -19,13 +19,11 @@
                 <li><a href="#Lieu">Lieu</a></li>
                 <li><a href="#Contact">Contact</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="section section-1" id="Accueil"></div>
-            <h2>1ère page<br>1ère page<br>1ère page<br>1ère page<br>1ère page<br>
-                1ère page<br>1ère page<br>1ère page<br>1ère page<br>1ère page<br></h2>
+            <h2>Accueil</h2>
         <div class="section section-2" id="Galerie"></div>
-            <h2>Galerie<br>Galerie<br>Galerie<br>Galerie<br>Galerie<br>Galerie<br>
-                Galerie<br>Galerie<br>Galerie<br>Galerie<br>Galerie<br>Galerie<br></h2>
+            <h2>Galerie<br></h2>
         <div class="section section-3" id="Expos"></div>
             <h2>Expos</h2>
         <div class="section section-4" id="Evenements"></div>
