Scroll bahvior terminé

--- a/index.html
+++ b/index.html
@@ -19,21 +19,27 @@
                 <li><a href="#Lieu">Lieu</a></li>
                 <li><a href="#Contact">Contact</a></li>
             </ul>
-        </nav>
-        <div class="section section-1" id="Accueil"></div>
-            <h2>Accueil</h2>
-        <div class="section section-2" id="Galerie"></div>
-            <h2>Galerie<br></h2>
-        <div class="section section-3" id="Expos"></div>
-            <h2>Expos</h2>
-        <div class="section section-4" id="Evenements"></div>
-            <h2>Événements</h2>
-        <div class="section section-5" id="Lieu"></div>
-            <h2>Lieu</h2>
-        <div class="section section-6" id="Contact"></div>
-            <h2>Contact</h2>
     </header>
-    
+        </nav>
+    <div class="section section-1" id="Accueil">
+        <h2>Accueil</h2>
+    </div>
+    <div class="section section-2" id="Galerie">
+        <h2>Galerie<br></h2>
+    </div>
+    <div class="section section-3" id="Expos">
+        <h2>Expos</h2>
+    </div>
+    <div class="section section-4" id="Evenements">
+        <h2>Événements</h2>
+    </div>
+    <div class="section section-5" id="Lieu">
+        <h2>Lieu</h2>
+    </div>
+    <div class="section section-6" id="Contact">
+        <h2>Contact</h2>
+    </div>
+
     <footer>
         
     </footer>
