button navbar qui grossi à l'hover corrigé

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#Accueil">Accueil</a></li>
-                <li><a href="#Galerie">Galerie</a></li>
-                <li><a href="#Expos">Expos</a></li>
-                <li><a href="#Evenements">Événements</a></li>
-                <li><a href="#Lieu">Lieu</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="#Accueil"><b>Accueil</b></a></li>
+                <li><a href="#Galerie"><b>Galerie</b></a></li>
+                <li><a href="#Expos"><b>Expos</b></a></li>
+                <li><a href="#Evenements"><b>Événements</b></a></li>
+                <li><a href="#Lieu"><b>Lieu</b></a></li>
+                <li><a href="#Contact"><b>Contact</b></a></li>
             </ul>
     </header>
         </nav>
@@ -41,7 +41,7 @@
     </div>
 
     <footer>
-        
+        <script src="script.js"></script>
     </footer>
 </body>
 </html>
