--- a/index.html
+++ b/index.html
@@ -25,7 +25,64 @@
         <h2>Accueil</h2>
     </div>
     <div class="section section-2" id="Galerie">
-        <h2>Galerie<br></h2>
+        <span id="votre_id1" class="target">
+        </span>
+        <span id="votre_id2" class="target">
+        </span>
+        <span id="votre_id3" class="target">
+        </span>
+        <span id="votre_id4" class="target">
+        </span>
+        <div class="cadre_diapo">
+        <div class="interieur_diapo">
+        <div class=description>
+        <span>
+        description1
+        </span>
+        <img src="images/1.jpg" alt>
+        </div>
+        <div class=description>
+        <span>
+        description2
+        </span>
+        <img src="images/2.jpg" alt>
+        </div>
+        <div class=description>
+        <span>
+        description3
+        </span>
+        <img src="images/3.jpg" alt>
+        </div>
+        <div class=description>
+        <span>
+        description4
+        </span>
+        <img src="images/4.jpg" alt>
+        </div>
+        </div>
+        <ul class="navigation_diapo">
+        <li>
+        <a href="#votre_id1">
+        <img src="images/1.jpg" alt>
+        </a>
+        </li>
+        <li>
+        <a href="#votre_id2">
+        <img src="images/2.jpg" alt>
+        </a>
+        </li>
+        <li>
+        <a href="#votre_id3">
+        <img src="images/3.jpg" alt>
+        </a>
+        </li>
+        <li>
+        <a href="#votre_id4">
+        <img src="images/4.jpg" alt>
+        </a>
+        </li>
+        </ul>
+        </div>
     </div>
     <div class="section section-3" id="Expos">
         <h2>Expos</h2>
