--- a/index.html
+++ b/index.html
@@ -22,66 +22,210 @@
     </header>
         </nav>
     <div class="section section-1" id="Accueil">
-        <h2>Accueil</h2>
+         <h2>Accueil</h2>
     </div>
     <div class="section section-2" id="Galerie">
-        <span id="votre_id1" class="target">
-        </span>
-        <span id="votre_id2" class="target">
-        </span>
-        <span id="votre_id3" class="target">
-        </span>
-        <span id="votre_id4" class="target">
-        </span>
-        <div class="cadre_diapo">
-        <div class="interieur_diapo">
-        <div class=description>
-        <span>
-        description1
-        </span>
-        <img src="images/1.jpg" alt>
-        </div>
-        <div class=description>
-        <span>
-        description2
-        </span>
-        <img src="images/2.jpg" alt>
-        </div>
-        <div class=description>
-        <span>
-        description3
-        </span>
-        <img src="images/3.jpg" alt>
-        </div>
-        <div class=description>
-        <span>
-        description4
-        </span>
-        <img src="images/4.jpg" alt>
-        </div>
-        </div>
-        <ul class="navigation_diapo">
-        <li>
-        <a href="#votre_id1">
-        <img src="images/1.jpg" alt>
-        </a>
-        </li>
-        <li>
-        <a href="#votre_id2">
-        <img src="images/2.jpg" alt>
-        </a>
-        </li>
-        <li>
-        <a href="#votre_id3">
-        <img src="images/3.jpg" alt>
-        </a>
-        </li>
-        <li>
-        <a href="#votre_id4">
-        <img src="images/4.jpg" alt>
-        </a>
-        </li>
-        </ul>
+        <div id="container">
+            <div id="calendar">
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/1.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>1</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/2.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>2</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/3.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>3</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/4.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>4</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/5.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>5</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/6.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>6</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/7.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>7</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/8.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>8</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/9.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>9</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/10.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>10</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/11.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>11</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/12.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>12</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/13.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>13</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/14.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>14</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/15.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>15</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/16.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>16</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/17.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>17</span>
+                    </div>
+                </div>
+                <!-- Fenêtre du calendrier -->
+                <div class="window">
+                    <!-- image de la fenêtre -->
+                    <div class="img-box">
+                        <img src="images/18.jpg" alt="">
+                    </div>
+                    <!-- numéro de la fenêtre -->
+                    <div class="txtbox trans">
+                        <span>18</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="section section-3" id="Expos">
@@ -96,7 +240,6 @@
     <div class="section section-6" id="Contact">
         <h2>Contact</h2>
     </div>
-
     <footer>
         <script src="script.js"></script>
     </footer>
