sauvegarde avant expérience GALERIE

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 <!--/ G A L E R I E-->
 
 <!-- E X P O S-->
-    <div class="section section-1" id="Expos">
+    <div class="section section-2" id="Expos">
         <div class="containerExpos">
             <div class="desc">
               <div class="tittle">
-                <h1 class="judul">This is galery</h1>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,Lorem ipsum dolor sit amet, consectetur adipiscing elit,Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+                <h1 class="judul">Description</h1>
+                <p class="text">Blablabla</p>
               </div>
               <div class="imgsrc">
                 <img src="images/1.jpg" class="prev">
@@ -105,11 +105,17 @@
     <div class="section section-1" id="Contact">
         <h2>Contact</h2>
    </div>
+   
 </body>
 <!--/ S E C T I O N S-->
 <footer>
 <!-- S C R I P T S -->
     <script>
+        /* Début SCRIPT Galerie */
+
+        /* Fin SCRIPT Galerie */
+
+
         /* Début SCRIPT EXPOS */
 
         const containerExpos = document.querySelector(".containerExpos");
