--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- G A L E R I E-->
     <div class="section section-1" id="Galerie">
         <div id="containerGalerie">
-
+            <div id="calendar">
             <div class="window">
                 <div class="img-box">
                     <a href="images/1.jpg" data-lightbox="art" data-title="Caption1">
@@ -57,9 +57,82 @@
                     </a>
                 </div>
             </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/4.jpg" data-lightbox="art" data-title="Caption4">
+                        <img src="images/4.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/5.jpg" data-lightbox="art" data-title="Caption5">
+                        <img src="images/5.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/6.jpg" data-lightbox="art" data-title="Caption6">
+                        <img src="images/6.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/7.jpg" data-lightbox="art" data-title="Caption7">
+                        <img src="images/7.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/8.jpg" data-lightbox="art" data-title="Caption8">
+                        <img src="images/8.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/9.jpg" data-lightbox="art" data-title="Caption9">
+                        <img src="images/9.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/10.jpg" data-lightbox="art" data-title="Caption10">
+                        <img src="images/10.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/11.jpg" data-lightbox="art" data-title="Caption11">
+                        <img src="images/11.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/12.jpg" data-lightbox="art" data-title="Caption12">
+                        <img src="images/12.jpg">
+                    </a>
+                </div>
+            </div>
+
         </div>
     </div>
-
+</div>
 <!--/ G A L E R I E-->
 
 <!-- E X P O S-->
@@ -130,6 +203,6 @@
        /* Fin SCRIPT EXPOS */ 
     </script>
 
-    <script src="lightbox-plus-jquery.js"></script>
+    <script src="lightbox-plus-jquery.min.js"></script>
     
 </footer>
