changements mineux css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="lightbox.css">
+    <link href="CSS/styles.css" rel="stylesheet">
+    <link href="CSS/box.css" rel="stylesheet" >
     <title>Le Lez'art</title>
 </head>
 <body>
