ajout de galerie

--- a/index.html
+++ b/index.html
@@ -142,6 +142,54 @@
                 </div>
             </div>
 
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/13.jpg" data-lightbox="art" data-title="Caption13">
+                        <img src="images/13.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/14.jpg" data-lightbox="art" data-title="Caption14">
+                        <img src="images/14.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/15.jpg" data-lightbox="art" data-title="Caption15">
+                        <img src="images/15.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/16.jpg" data-lightbox="art" data-title="Caption16">
+                        <img src="images/16.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/17.jpg" data-lightbox="art" data-title="Caption17">
+                        <img src="images/17.jpg">
+                    </a>
+                </div>
+            </div>
+
+            <div class="window">
+                <div class="img-box">
+                    <a href="images/18.jpg" data-lightbox="art" data-title="Caption18">
+                        <img src="images/18.jpg">
+                    </a>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
