sauvegarde avant départ

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <!--/ N A V B A R -->
 
 <!-- S E C T I O N S-->
+
+<!-- S W I P E R-->
     <div class="section section-1" id="Accueil">
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
@@ -41,6 +43,7 @@
             <div class="swiper-pagination"></div>
         </div>
     </div>
+<!--/ S W I P E R-->
 
 <!-- G A L E R I E-->
     <div class="section section-2" id="Galerie">
@@ -232,7 +235,7 @@
 <!--/ S E C T I O N S-->
 
 <!-- S C R I P T S -->
-<!-- Début SCRIPT EXPOS -->
+<!--EXPOS -->
 <footer>
         <script>
         const containerExpos = document.querySelector(".containerExpos");
@@ -258,7 +261,7 @@
           }
         });
         </script>
-<!-- Fin SCRIPT EXPOS -->
+<!--/EXPOS -->
 
 <!-- Swiper JS  -->
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
